[tool.poetry]
name = "allennlp-ner-ja"
version = "0.1.0"
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
allennlp = ">=2.0.0"
fugashi = "^1.1.2"
ipadic = "^1.0.0"
pyknp = "^0.6.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.950"
pytest = "^7.1.2"
poethepoet = "^0.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
force-cuda11 = "./scripts/force_cuda/force_cuda11.sh"
